* Fixed bot not able to restart

* Added logger (currently on alert command only)

* Added join and quit listener

* Added date formatter to index.js

* Simplified config file reader

* Removed debug message

* Removed unnecessary logic on Logger

12/11/2019 (UTC+7)